# full-stack-try

./: Makefile  README.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/: main.py
backend/src/dependency/: database.py
backend/src/infra/: hasher.py
backend/src/model/: user.py
backend/src/repository/: user.py
backend/src/routes/: auth.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/src/: auth-credential.ts  middleware.ts
frontend/src/actions/: auth-actions.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: LoginForm.tsx  Provider.tsx
frontend/src/types/: next-auth.d.ts  signin-schema.ts
