[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiaoyu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.0,<0.124.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "psycopg[binary] (>=3.2.12)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
